(library
 (name liveview)
 (modules liveview crunch)
 (libraries
  liveview.bonesai
  liveview.weak_ptr
  dream
  tyxml
  yojson
  ppx_yojson_conv_lib)
 (preprocess
  (pps lwt_ppx ppx_yojson_conv))
 (public_name liveview))

(rule
 (targets crunch.ml)
 (deps favicon.ico liveview.js idiomorph.js)
 (action
  (run ocaml-crunch -m plain -e js -e ico -o crunch.ml -s .)))

(rule
 (targets idiomorph.js)
 (action
  (run curl -Ls "https://unpkg.com/idiomorph@0.7.4" -o idiomorph.js)))

(executable
 (name ex0_basic)
 (modules ex0_basic)
 (libraries liveview liveview.bonesai dream tyxml ppx_yojson_conv_lib)
 (preprocess
  (pps lwt_ppx)))
