(library
 (name liveview)
 (modules liveview crunch)
 (libraries liveview.bonesai dream tyxml yojson ppx_yojson_conv_lib)
 (preprocess
  (pps lwt_ppx ppx_yojson_conv))
 (public_name liveview))

(rule
 (targets crunch.ml)
 (deps favicon.ico liveview.js idiomorph.js)
 (action
  (run ocaml-crunch -m plain -e js -e ico -o crunch.ml -s .)))

(rule
 (targets idiomorph.js)
 (mode promote)
 (action
  (run curl -Ls "https://unpkg.com/idiomorph@0.7.4" -o idiomorph.js)))

(library
 (name ppx)
 (public_name liveview.ppx)
 (modules ppx)
 (kind ppx_rewriter)
 (libraries ppxlib)
 (preprocess
  (pps ppxlib.metaquot)))

(executables
 (names ex0_basic ex0_basic_ppx ex1_list ex2_assoc)
 (modules ex0_basic ex0_basic_ppx ex1_list ex2_assoc)
 (libraries liveview liveview.bonesai dream tyxml ppx_yojson_conv_lib)
 (preprocess
  (pps lwt_ppx liveview.ppx)))
